istio/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: words-gateway
  namespace: istio-ingress
spec:
  gatewayClassName: istio
  listeners:
    - name: http
      hostname: "*.private"
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
