istio/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: aggregator
spec:
  parentRefs:
    - name: words-gateway
      namespace: istio-ingress
  hostnames: ["aggregator.private"]
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: aggregator
          port: 8080
